--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ inflection==0.5.1
 psycopg2-binary==2.9.10
 six==1.16.0
 sqlparse>=0.5.0 # not directly required, pinned by Snyk to avoid a vulnerability
+dj-database-url>=1.0.0
