feat: 添加自动数据同步功能
- 添加 APScheduler 依赖实现定时同步
- 创建定时任务调度器模块 (gutendex/scheduler.py)
- 添加管理命令 start_scheduler 用于启动调度器
- 更新 start.sh 自动启动定时同步调度器
- 支持通过环境变量配置同步时间和频率
- 更新 SYNC_DATA.md 文档说明自动同步功能

特性：
- 默认每天凌晨 2:00 (UTC) 自动同步数据
- 可通过 AUTO_SYNC_ENABLED, AUTO_SYNC_TIME, AUTO_SYNC_SCHEDULE 环境变量配置
- 防止重复执行，确保同一时间只有一个同步任务运行
- 支持日志记录和错误处理

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ six==1.16.0
 sqlparse>=0.5.0 # not directly required, pinned by Snyk to avoid a vulnerability
 dj-database-url>=1.0.0
 gunicorn
+apscheduler>=3.10.4
